gateway/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: team-a-route
  namespace: team-a-demo
spec:
  parentRefs:
    - name: platform-gateway
      namespace: platform-ingress
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /team-a
      backendRefs:
        - name: team-a-svc
          namespace: team-a-demo
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: team-b-route
  namespace: team-b-demo
spec:
  parentRefs:
    - name: platform-gateway
      namespace: platform-ingress
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /team-b
      backendRefs:
        - name: team-b-svc
          namespace: team-b-demo
          port: 80
